Add message informing users they need to move the marker when adding a tree Fixes #741

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -15,6 +15,7 @@
         <a class="geolocate"><i class="icon-direction"></i> Use Current Location</a>
         <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate this address" %}</div>
         <div class="alert alert-error text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
+        <div class="alert alert-info move-tree-message" style="display: none;">{% trans "Please move the plot marker to continue" %}</div>
     </div>
     <div class="add-step">
         <h4>2. {% trans "Additional information" %}</h4>
