--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -134,7 +134,7 @@
 
       {% if request.instance_supports_ecobenefits %}
       <div id="ecobenefits">
-        {% include "treemap/partials/plot_eco.html" with benefits=benefits %}
+        {% include "treemap/partials/plot_eco.html" %}
       </div>
       {% else %}
       <div>
