--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -11,7 +11,7 @@
         <a class="btn" data-class="display" id="full-details-button">{% trans "Full Details" %}</a>
         <button class="btn"
                 data-class="display"
-                id="edit-details-button"
+                id="quick-edit-button"
                 data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
                 data-href="{{ request.get_full_path }}"
                 data-disabled-title="{% trans "Editing of the tree details is not available to all users" %}"
