--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -1,43 +1,43 @@
 {% load i18n %}
 {% load l10n %}
-{% load diameter %}
 
 <table id="diameter-calculator" class="table table-hover table-bordered">
   <thead>
     <tr>
       <th>Diameter</th>
       <th>Circumference</th>
-        {% if not hide_multiple_trunks %}
-          <th>
-            <a id="add-trunk-row"
-               title="{% trans "Additional Trunk" %}"
-               class="btn btn-mini" href="javascript:;"><i class="icon-plus"></i></a>
-          </th>
-        {% endif %}
+      <th>
+        <a id="add-trunk-row"
+           title="{% trans "Additional Trunk" %}"
+           class="btn btn-mini" href="javascript:;"><i class="icon-plus"></i></a>
+      </th>
     </tr>
   </thead>
   <tbody id="diameter-worksheet">
     <tr id="trunk-row">
       <td>
-        <input class="input-small"
-               data-class="diameter-input"
-               type="text"
-               value="{{ field.value|default_if_none:""|unlocalize }}"/>
+        <div class="input-append">
+          <input class="input-small"
+                 data-class="diameter-input"
+                 type="text"
+                 data-value="{{ field.value|unlocalize }}"
+                 data-digits="{{ field.digits }}"
+                  />
+          <span class="add-on" {{ unit_extra|default:"" }}>{{ field.units }}</span>
+        </div>
       </td>
       <td>
-        <input class="input-small"
-               data-class="circumference-input"
-               type="text"
-               value="{{ field.value|to_circumference|unlocalize }}"
-               />
+        <div class="input-append">
+          <input class="input-small"
+                 data-class="circumference-input"
+                 type="text"
+                  />
+          <span class="add-on" {{ unit_extra|default:"" }}>{{ field.units }}</span>
+        </div>
       </td>
-      {% if not hide_multiple_trunks %}
-        <td></td>
-      {% endif %}
+      <td></td>
     </tr>
   </tbody>
 </table>
-{% if not hide_multiple_trunks %}
-<p id="diameter-calculator-total-row" style="visibility: hidden;">Total Diameter: <span id="diameter-calculator-total-reference">{{ field.value|default_if_none:""|unlocalize }}</span>{% if field.units %} {{ field.units }}{% endif %}</p>
+<p id="diameter-calculator-total-row" style="display: none">Combined Diameter: <span id="diameter-calculator-total-reference"></span>{% if field.units %} {{ field.units }}{% endif %}</p>
 <a id="diameter-video" href="http://player.vimeo.com/video/11119129" target="_blank"><i class="icon-videocam"></i> Measuring multiple trunks?</a>
-{% endif %}
