Only try to render scalar udfs on plot detail

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -124,7 +124,7 @@
             <!-- See github #379 and #772 for more details -->
             <!-- {% trans "Read Only" as readonly %} -->
             <!-- {% field readonly from "plot.readonly" for request.user withtemplate "treemap/field/tr.html" with extra='style="display:none" %} -->
-            {% for label, udf in plot.udf_names_and_fields %}
+            {% for label, udf in plot.scalar_udf_names_and_fields %}
               {% field label from udf withtemplate "treemap/field/tr.html" %}
             {% endfor %}
           </tbody>
