Add ITreeCodeOverride table
ITreeCodeOverride table
* Stores "species + region --> itree code" overrides
* Declares that a species/region pair must be unique

Update itree_code fetcher (itree_code_for_species_in_region) to use this logic:
* Look first for an i-tree code override in ITreeCodeOverride table (using in-memory version if supplied)
* If no override, find i-tree code in CODES dict as before

Also:
* Delete unused function get_codes_for_species()
* Conversion function _trees_for_eco() now used only locally
* Rename species_in_region() helper as has_itree_code(), and simplify
* Simplify language in plot_eco.html (fixes #925)

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 
-{% if tree.species and not tree.species_in_region %}
+{% if not tree.has_itree_code %}
 <div>
   {% blocktrans %}
-  <p>Ecosystem benefits cannot be calculated for this species of tree based on the location of the tree.
+  <p>Ecosystem benefits cannot be calculated for this species of tree in this location.
   <p>The tree's location falls within a climate region that does not support benefit calculations for this species.
   {% endblocktrans %}
 </div>
