Pass treeId through from plot_detail endpoint
Tree ID is always passed through (either as a number or null) to ajax callers of the plot_detail endpoint. plot.js listens for treeId values and puts them into the edit form.

This is required so that we can put the newly created tree id into the edit form. Having the id in the edit form, in turn, is required in order to be able to delete a tree after adding it, without reloading the page.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -75,7 +75,8 @@
               {% usercanread tree "id" as value %}
               <tr>
                 <td>{% trans "Tree Number" %}</td>
-                <td>
+                <td id="tree-id-column"
+                    data-tree-id="{% if has_tree %}{{ tree.pk }}{% endif %}">
                 {% if has_tree %}
                   <a href="{% url 'tree_detail' instance_url_name=request.instance.url_name plot_id=plot.pk tree_id=tree.pk %}">{{ value }}</a>
                 {% endif %}
@@ -234,6 +235,7 @@
           config: config,
           startInEditMode: {% if editmode %}true{% else %}false{% endif %},
           updateEcoUrl: updateEcoUrl,
+          treeIdColumn: '#tree-id-column',
           ecoBenefits: '#ecobenefits',
           updateSidebarUrl: updateSidebarUrl,
           sidebar: '#sidebar',
