Modify delete template tag to match audit logic
There was a bug on staging because these two different code paths treat UDFs differently. This problem is fixed by using the same test in the template tag that is used in the audit system.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -52,7 +52,7 @@
       <button id="delete-plot-or-tree"
               data-class="display"
               disabled="disabled"
-              data-always-enable="{{ last_effective_instance_user|plot_is_deletable }}"
+              data-always-enable="{{ last_effective_instance_user|is_deletable:plot }}"
               data-href="{{ request.get_full_path }}"
               data-disabled-title="{% trans "Deleting of trees is not available to all users" %}"
               class="btn btn-small btn-primary">{% trans "Delete" %}</button>
