--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -52,7 +52,12 @@
       <button id="delete-plot-or-tree"
               data-class="display"
               disabled="disabled"
+              {% if has_tree %}
+              {# TODO: this will not work quite right when a user adds a tree without refreshing #}
+              data-always-enable="{{ last_effective_instance_user|is_deletable:tree }}"
+              {% else %}
               data-always-enable="{{ last_effective_instance_user|is_deletable:plot }}"
+              {% endif %}
               data-href="{{ request.get_full_path }}"
               data-disabled-title="{% trans "Deleting of trees is not available to all users" %}"
               class="btn btn-small btn-primary">{% trans "Delete" %}</button>
