Fix localization of tree ids
This was causing malformed urls on servers with >1000 trees, due to the presence of commas.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -99,9 +99,9 @@
               <tr>
                 <td>{% trans "Tree Number" %}</td>
                 <td id="tree-id-column"
-                    data-tree-id="{% if has_tree %}{{ tree.pk }}{% endif %}">
+                    data-tree-id="{% if has_tree %}{{ value|unlocalize }}{% endif %}">
                 {% if has_tree %}
-                  <a href="{% url 'tree_detail' instance_url_name=request.instance.url_name plot_id=plot.pk tree_id=tree.pk %}">{{ value }}</a>
+                  <a href="{% url 'tree_detail' instance_url_name=request.instance.url_name plot_id=plot.pk tree_id=tree.pk %}">{{ value|unlocalize }}</a>
                 {% endif %}
                 </td>
               </tr>
