plot -> planting site

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -69,7 +69,7 @@
           {% trans "You are about to delete this tree. Do you want to continue?" %}
         </div>
         <div id="delete-plot-warning" style="display: none;">
-          {% trans "You are about to delete this plot. Once deleted, it will not be possible to view the details of this plot or the trees it has contained in the past. Are you sure you want to continue?" %}
+          {% trans "You are about to delete this planting site. Once deleted, it will not be possible to view the details of this planting site or the trees it has contained in the past. Are you sure you want to continue?" %}
         </div>
         <button id="delete-confirm" class="btn btm-small btn-primary">{% trans "Confirm Deletion" %}</button>
         <button id="delete-cancel" class="btn btm-small btn-primary">{% trans "Cancel Deletion" %}</button>
