Show plot UDF fields on the plot detail page
Fixes #971

Stewardship fields are created for both trees and plots during
instance creation but the template was only displaying collection UDF
fields for the tree model, not the plot model.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -153,6 +153,14 @@
             {% endfor %}
           </tbody>
         </table>
+
+        {# Render collection UDF fields for the Plot  #}
+        {% for udf in plot.get_user_defined_fields %}
+          {% if udf.iscollection %}
+            {% include "treemap/partials/collectionudf.html" with udf=udf %}
+          {% endif %}
+        {% endfor %}
+
       </form>
       <hr>
 
