Handle collection UDF date fields
The UI was using a simple text box for date fields within collection UDF
fields. I added a date picker to the field and modified the backend to
accept a date without a time as a valid value.

NOTE: This is an intermediate improvement to the date handling on
collection UDF fields. It should be further improved by displaying dates
in a local-appropriate format but posting them to the server in the ISO
format the back end expects.

--- a/opentreemap/treemap/templates/treemap/partials/udf_edit_field.html
+++ b/opentreemap/treemap/templates/treemap/partials/udf_edit_field.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% if field.type == 'choice' %}
 <select data-field-name="{{ field.name }}">
   {% for choice in field.choices %}
@@ -5,7 +6,7 @@
   {% endfor %}
 </select>
 {% elif field.type == 'date' %}
-<input data-field-name="{{ field.name }}" value="2013-09-12 10:10:10">
+<input data-field-name="{{ field.name }}" data-date-format="yyyy-mm-dd" data-moment-date-format="YYYY-MM-DD" value="{% trans "Today" %}">
 {% else %}
 <input data-field-name="{{ field.name }}">
 {% endif %}
