--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -6,6 +6,7 @@
 {% load humanize %}
 {% load auth_extras %}
 {% load form_extras %}
+{% load udf %}
 
 {% block page_title %} | {% trans "Planting Site" %} {{plot.pk}}{% endblock %}
 
@@ -120,13 +121,17 @@
             </tbody>
           </table>
 
+          {# Render collection UDF fields for the Tree #}
           {% if tree %}
-          {% for udf in tree.get_user_defined_fields %}
-            {% if udf.iscollection %}
-              {% include "treemap/partials/collectionudf.html" with udf=udf %}
-            {% endif %}
-          {% endfor %}
+            {% for udf in tree.get_user_defined_fields %}
+              {% if udf.iscollection %}
+                {% with values=udf|collection_values_for_model_id:tree.pk %}
+                  {% include "treemap/partials/collectionudf.html" with udf=udf model=tree values=values %}
+                {% endwith %}
+              {% endif %}
+            {% endfor %}
           {% endif %}
+
         </div>
 
         <table class="table table-striped table-hover">
@@ -157,7 +162,9 @@
         {# Render collection UDF fields for the Plot  #}
         {% for udf in plot.get_user_defined_fields %}
           {% if udf.iscollection %}
-            {% include "treemap/partials/collectionudf.html" with udf=udf %}
+            {% with values=udf|collection_values_for_model_id:plot.pk %}
+              {% include "treemap/partials/collectionudf.html" with udf=udf model=plot values=values %}
+            {% endwith %}
           {% endif %}
         {% endfor %}
 
