--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -135,7 +135,7 @@
         </div>
 
         <table class="table table-striped table-hover">
-          <h4>{% trans "Plot Information" %}</h4>
+          <h4>{% trans "Planting Site Information" %}</h4>
           <tbody>
             {% trans "Width" as width %}
             {% field width from "plot.width" for request.user withtemplate "treemap/field/tr.html" %}
