--- a/opentreemap/treemap/templates/treemap/field/inputs.html
+++ b/opentreemap/treemap/templates/treemap/field/inputs.html
@@ -20,7 +20,7 @@
            class={{ class|default_if_none:"" }}
            value="{{ field.value }}"
            {{ extra|default:"" }} />
-{% elif field.data_type == 'date' %}
+{% elif field.data_type == 'date' or field.data_type == 'datetime' %}
     <input name="{{ field.identifier }}"
            type="text"
            class="span2 {{ class|default_if_none:"" }}"
