--- a/opentreemap/treemap/css/sass/partials/_footer.scss
+++ b/opentreemap/treemap/css/sass/partials/_footer.scss
@@ -14,7 +14,7 @@ footer {
     a {
         color: $subtext-color;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 1.2rem;
 
         &:hover {
             color: $main-text-color;
