--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -1,7 +1,7 @@
 // Fonts
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,400,700);
 $base-font-family               : 'Open Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$base-font-size                 : 16px;
+$base-font-size                 : 62.5%;
 
 // Colors
 $primary-color                  : #8baa3d !default; // OTM Green color
