--- a/opentreemap/treemap/css/sass/partials/_calculator.scss
+++ b/opentreemap/treemap/css/sass/partials/_calculator.scss
@@ -6,7 +6,7 @@
 
     & + a {
         font-weight: 300;
-        font-size: 0.75em;
+        font-size: 1.2rem;
         margin-bottom: 10px;
         display: block;
 
@@ -47,7 +47,7 @@
 
 [data-field="tree.diameter"] {
     #diameter-video {
-        font-size: 12px;
+        font-size: 1.2rem;
         font-weight: 400;
 
         > i {
