--- a/opentreemap/treemap/css/sass/partials/_content.scss
+++ b/opentreemap/treemap/css/sass/partials/_content.scss
@@ -1,62 +1,69 @@
 // Partial: Content Pages
 
 .faq-content {
-  position: absolute;
-  left: 490px;
-  padding-right: 25px;
+    position: absolute;
+    left: 490px;
+    padding-right: 25px;
+    
+    h1 {
+        padding-top: 0;
+        margin-top: 0;
+        font-weight: 700;
+        font-size: 3.2rem;
+    }
+    h2 {
+        font-size: 2.4rem;
+        font-weight: 400;
+    }
 }
-  .faq-content h1 {
-    padding-top: 0;
-    margin-top: 0;
-    font-weight: 700;
-    font-size: 32px;
-  }
-  .faq-content h2 {
-    font-size: 24px;
-    font-weight: 400;
-  }
+
 .faq-nav {
-  width: 390px;
-  float: left;
-  margin-left: 10px;
-  padding: 15px;
-  border: 1px solid #eee;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+    width: 390px;
+    float: left;
+    margin-left: 10px;
+    padding: 15px;
+    border: 1px solid #eee;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+
+    h5 {
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 0 0 10px;
+        margin: 0;
+        font-size: 1.8rem;
+    }
+
+    ul {
+        margin: 0;
+        padding: 0 0 15px;
+        list-style: none;
+
+        li {
+            display: block;
+            padding: 3px 10px;
+            margin-left: -10px;
+            width: 100%;
+
+            &:hover {
+                background-color: #eee;
+                -moz-border-radius: 3px;
+                -webkit-border-radius: 3px;
+                border-radius: 3px;
+            }
+        }
+    }
+    a {
+        font-size: 1.6rem;
+        color: #777;
+
+        &:hover {
+            text-decoration: none;
+            color: #000;
+        }
+    }
 }
-  .faq-nav h5 {
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 0 0 10px;
-    margin: 0;
-    font-size: 18px;
-  }
-  .faq-nav ul {
-    margin: 0;
-    padding: 0 0 15px;
-    list-style: none;
-  }
-    .faq-nav li {
-      display: block;
-      padding: 3px 10px;
-      margin-left: -10px;
-      width: 100%;
-    }
-    .faq-nav li:hover {
-      background-color: #eee;
-      -moz-border-radius: 3px;
-      -webkit-border-radius: 3px;
-      border-radius: 3px;
-    }
-  .faq-nav a {
-    font-size: 16px;
-    color: #777;
-  }
-    .faq-nav a:hover {
-      text-decoration: none;
-      color: #000;
-    }
 
 @media (max-width: 767px) {
 	.faq-nav {
