--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -75,18 +75,18 @@ body {
 
 	h3 {
 		color: $secondary-color;
-		font-size: 1em;
+		font-size: 1.6rem;
 		font-weight: 400;
-		line-height: 21px;
+		line-height: 2.1rem;
 		margin-bottom: 8px;
 	}
 	h5 {
 		margin-bottom: 6px;
 	}
 	p, li {
-		font-size: 0.875em;
+		font-size: 1.4rem;
 		font-weight: 300;
-		line-height: 1.5em;
+		line-height: 2.4rem;
 	}
 }
 
