--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -1,7 +1,7 @@
 // Partial: Navbar
 
 .navbar {
-    font-size: 1em;
+    font-size: 1.6rem;
 
     @media (max-width: 979px) {
         margin-bottom: 0;
@@ -65,11 +65,11 @@
             > a {
                 padding: 12px 0 8px;
                 height: 20px;
-                font-size: 1em;
+                font-size: 1.4rem;
                 font-weight: 400;
 
                 > .reputation {
-                    font-size: em(14px);
+                    font-size: 1.2rem;
                     color: white;
                 }
 
