--- a/opentreemap/treemap/css/sass/partials/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/_registration.scss
@@ -15,7 +15,7 @@
 
     legend {
         padding: 0 20px 15px 20px;
-        font-size: 24px;
+        font-size: 2.4rem;
         font-weight: 300;
         color: $main-text-color;
         margin: 0 -20px 20px -20px;
@@ -23,7 +23,7 @@
 }
 
 .have-account {
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 .signup-option {
