--- a/opentreemap/treemap/css/sass/partials/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/_treedetails.scss
@@ -108,7 +108,7 @@
         width: 50px;
         height: 50px;
         margin-top: -25px;
-        font-size: 40px;
+        font-size: 4.0rem;
         line-height: normal;
         text-align: center;
         background: transparent;
