--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -1,34 +1,32 @@
 // Partial: Typography
 
-// Convert ems to pixels
-// -- 16px = 1em, this converts appropriately
-@function em($px, $base: $base-font-size) {
-	@return ($px / $base) * 1em;
+html {
+    font-size: $base-font-size;
 }
 
 body {
 	font-family: $base-font-family;
-	font-size: $base-font-size;
+	font-size: 1.6rem;
 }
 
 h1, h2, h3, h4, h4, h5 {
 	font-family: $base-font-family;
 	font-weight: 300;
-	margin: 0 0 0.75em;
+	margin: 0 0 1.2rem;
 }
 
 p, li {
-	line-height: 1.25em;
-	font-size: 0.875em;
+	line-height: 2.1rem;
+	font-size: 1.4rem;
 
 	label {
-		font-size: 0.875em;
+		font-size: 1.4rem;
 	}
 }
 
 label {
 	color: $subtext-color;
-	font-size: 0.75em;
+	font-size: 1.2rem;
 	font-weight: 400;
 
 	&.radio.inline,
@@ -40,7 +38,7 @@ label {
 
 .text-info {
 	color: lighten($subtext-color, 5%);
-	font-size: 0.75em;
+	font-size: 1.2rem;
 	margin: -2px 0 16px;
 }
 
@@ -60,7 +58,7 @@ input[type="tel"],
 input[type="color"], 
 textarea, 
 .uneditable-input {
-	font-size: 1em;
+	font-size: 1.6rem;
 	padding: 8px 8px;
 	color: $subtext-color;
 	border-radius: 6px;
@@ -79,7 +77,7 @@ textarea,
 .input-append {
 	input {
 		border-radius: 6px 0 0 6px;
-		font-size: 16px;
+		font-size: 1.6rem;
 	}
 	span.add-on {
 		padding: 8px;
@@ -91,7 +89,7 @@ textarea {
 }
 
 .table {
-	font-size: em(14px);
+	font-size: 1.4rem;
 }
 
 .btn-mini [class^="icon-"], 
