--- a/opentreemap/treemap/templates/treemap/staticpage.html
+++ b/opentreemap/treemap/templates/treemap/staticpage.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="image-background"></div>
 <div class="container contained profile">
-    <div class="row">
+    <div class="row-fluid">
         <div class="span12">
           {{ content|safe }}
         </div>
