--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -63,7 +63,7 @@
             }
 
             > a {
-                padding: 12px 0 8px;
+                padding: 10px 0;
                 height: 20px;
                 font-size: 1.4rem;
                 font-weight: 400;
