Fix Leaflet button position on maps

--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -34,6 +34,15 @@
             }
         }
     }
+
+    // Overrides Leaflet button in bottom-right
+    .leaflet-bottom.leaflet-right {
+        margin: 0 !important;
+
+        .leaflet-control {
+            margin-right: 0;
+        }
+    }
 }
 
 .leaflet-control-layers-toggle {
