--- a/opentreemap/treemap/css/sass/partials/_content.scss
+++ b/opentreemap/treemap/css/sass/partials/_content.scss
@@ -8,7 +8,7 @@
     float: right;
     margin-left: 30px;
     width: 25%;
-    padding: 20px;
+    padding: 10px 20px 20px;
     background: $light-gray-color;
     border: 1px solid ($light-gray-color, 10%);
 
@@ -22,6 +22,7 @@
       }
       &.title {
         list-style: none;
+        margin-top: 10px;
         
         a {
           font-weight: 700;
