User attribute not being included on plot detail
This was preventing checking field visibility

Fixes #1032

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -120,7 +120,7 @@
               {% trans "Date Removed" as removed %}
               {% field removed from "tree.date_removed" for request.user withtemplate "treemap/field/tr.html" %}
               {% for label, udf in tree.scalar_udf_names_and_fields %}
-                {% field label from udf withtemplate "treemap/field/tr.html" %}
+                {% field label from udf for request.user withtemplate "treemap/field/tr.html" %}
               {% endfor %}
             </tbody>
           </table>
@@ -158,7 +158,7 @@
             <!-- {% trans "Read Only" as readonly %} -->
             <!-- {% field readonly from "plot.readonly" for request.user withtemplate "treemap/field/tr.html" with extra='style="display:none" %} -->
             {% for label, udf in plot.scalar_udf_names_and_fields %}
-              {% field label from udf withtemplate "treemap/field/tr.html" %}
+              {% field label from udf for request.user withtemplate "treemap/field/tr.html" %}
             {% endfor %}
           </tbody>
         </table>
