Redirect to the map page on activation when signing up from an instance
Also refactors ActivationView to only override functionality we actually
want to change

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -89,7 +89,9 @@
               </li>
             {% else %}
               <li><a id="login" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
+              {% block signup %}
               <li><a href="{% url 'registration_register' %}">{% trans "Sign Up" %}</a></li>
+              {% endblock signup %}
             {% endif %}
           </ul>
         </div>
