--- a/opentreemap/treemap/templates/treemap/edits.html
+++ b/opentreemap/treemap/templates/treemap/edits.html
@@ -59,14 +59,22 @@ active
           </td>
           <td>{{ audit.pk }}</td>
           <td>
+            {% if audit.model == 'Tree' or audit.model == 'Plot' %}
             <a href="?models={{ audit.model }}">
-            {{ audit.model }}
+              {{ audit.model|display_name }}
             </a>
+            {% else %}
+            {{ audit.model|display_name }}
+            {% endif %}
           </td>
           <td>
+            {% if audit.model == 'Tree' or audit.model == 'Plot' %}
             <a href="?models={{ audit.model }}&model_id={{ audit.model_id }}">
               {{ audit.model_id }}
             </a>
+            {% else %}
+            {{ audit.model_id }}
+            {% endif %}
           </td>
           {% endlocalize %}
           <td>{{ audit.field_display_name }}</td>
