--- a/opentreemap/treemap/templates/treemap/recent_user_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_user_edits.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load util %}
 
 <table id="recent-user-edits" class="table table-hover table-bordered table-condensed">
     <thead>
@@ -14,7 +15,7 @@
         {% for audit in audits %}
         <tr data-id="{{audit.id}}">
             <td>{{ audit.display_action }}</td>
-            <td>{{ audit.model }}</td>
+            <td>{{ audit.model|display_name }}</td>
             <td>{{ audit.field_display_name }}</td>
 
             {% if audit.field == 'plot' %}
